--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,33 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.LoginActivity"
-    android:background="@color/main_color">
+    android:background="@color/main_color"
+    tools:context=".view.activities.LoginActivity">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:fontFamily="@font/nunito_bold"
-        android:textSize="30dp"
-        android:gravity="center"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="30dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/nunito_bold"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/shape"
         android:layout_width="match_parent"
-        app:layout_constraintHeight_percent="1"
         android:layout_height="0dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/name"
-        android:src="@drawable/shape_white">
-    </com.google.android.material.imageview.ShapeableImageView>
+        android:src="@drawable/shape_white"
+        app:layout_constraintHeight_percent="1"
+        app:layout_constraintTop_toBottomOf="@+id/name"></com.google.android.material.imageview.ShapeableImageView>
+
     <TextView
         android:id="@+id/signUpText"
         android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/shape"/>
+        app:layout_constraintTop_toTopOf="@id/shape" />
 
     <TextView
         android:id="@+id/signUp"
@@ -51,23 +51,23 @@
         android:layout_marginTop="5dp"
         android:text="@string/not_yet_registered_click_here"
         android:textColor="@color/main_color"
-        android:textSize="10sp"
+        android:textSize="11sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signUpText"/>
+        app:layout_constraintTop_toBottomOf="@id/signUpText" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
         android:fitsSystemWindows="true"
-        app:layout_constraintTop_toBottomOf="@id/signUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signUp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipChildren="false"
@@ -84,31 +84,31 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/forgot_password_tv" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/tv_or"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_centerHorizontal="true"-->
-<!--                android:layout_marginTop="15dp"-->
-<!--                android:text="or"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:textSize="18sp"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toBottomOf="@+id/login_btn" />-->
+            <!--            <TextView-->
+            <!--                android:id="@+id/tv_or"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_centerHorizontal="true"-->
+            <!--                android:layout_marginTop="15dp"-->
+            <!--                android:text="or"-->
+            <!--                android:textAlignment="center"-->
+            <!--                android:textColor="@color/black"-->
+            <!--                android:textSize="18sp"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/login_btn" />-->
 
-<!--            <androidx.appcompat.widget.AppCompatButton-->
-<!--                android:id="@+id/btn_facebook_login"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="48sp"-->
-<!--                android:layout_marginTop="16dp"-->
-<!--                android:clickable="true"-->
-<!--                android:focusable="true"-->
-<!--                android:text="continue_with_facebook"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toBottomOf="@+id/tv_or" />-->
+            <!--            <androidx.appcompat.widget.AppCompatButton-->
+            <!--                android:id="@+id/btn_facebook_login"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="48sp"-->
+            <!--                android:layout_marginTop="16dp"-->
+            <!--                android:clickable="true"-->
+            <!--                android:focusable="true"-->
+            <!--                android:text="continue_with_facebook"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/tv_or" />-->
 
             <TextView
                 android:id="@+id/user_login_label_tv"
@@ -137,20 +137,20 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/login_user_name_til"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="12dp"
+                android:hint="@string/email_address"
+                app:endIconMode="clear_text"
                 app:helperText="@string/helper_text"
                 app:helperTextTextColor="@color/helper_text_color"
-                android:layout_marginHorizontal="20dp"
-                app:startIconDrawable = "@drawable/ic_baseline_email_24"
-                app:endIconMode="clear_text"
-                android:hint="@string/email_address"
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginTop="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/user_login_label_tv">
+                app:layout_constraintTop_toBottomOf="@+id/user_login_label_tv"
+                app:startIconDrawable="@drawable/ic_baseline_email_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_email"
@@ -162,26 +162,26 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/login_password_til"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="16dp"
+                android:hint="@string/password"
                 app:helperText="@string/helper_text"
                 app:helperTextTextColor="@color/helper_text_color"
-                android:layout_marginHorizontal="20dp"
-                app:startIconDrawable = "@drawable/ic_baseline_lock_24"
-                android:hint="@string/password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/login_user_name_til"
-                app:passwordToggleEnabled="true">
+                app:passwordToggleEnabled="true"
+                app:startIconDrawable="@drawable/ic_baseline_lock_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPassword"
                     android:fontFamily="@font/nunito_bold"
+                    android:inputType="textPassword"
                     android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
