--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@color/main_color"
-tools:context=".view.activities.SignUpActivity"
-android:id="@+id/parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/main_color"
+    tools:context=".view.activities.SignUpActivity">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:fontFamily="@font/nunito_bold"
-        android:textSize="30dp"
-        android:gravity="center"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="30dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/nunito_bold"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/shape"
         android:layout_width="match_parent"
-        app:layout_constraintHeight_percent="1"
         android:layout_height="0dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/name"
-        android:src="@drawable/shape_white">
+        android:src="@drawable/shape_white"
+        app:layout_constraintHeight_percent="1"
+        app:layout_constraintTop_toBottomOf="@+id/name">
 
     </com.google.android.material.imageview.ShapeableImageView>
+
     <TextView
         android:id="@+id/app_logo_iv"
         android:layout_width="wrap_content"
@@ -44,7 +45,7 @@ android:id="@+id/parent">
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/shape"/>
+        app:layout_constraintTop_toTopOf="@id/shape" />
 
     <TextView
         android:id="@+id/login"
@@ -53,26 +54,26 @@ android:id="@+id/parent">
         android:layout_marginTop="5dp"
         android:text="@string/already_a_user_click_here"
         android:textColor="@color/main_color"
-        android:textSize="10sp"
+        android:textSize="11sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/app_logo_iv"/>
+        app:layout_constraintTop_toBottomOf="@id/app_logo_iv" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
         android:fitsSystemWindows="true"
-        app:layout_constraintTop_toBottomOf="@id/login"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/login">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:clipChildren="false"
             android:clipToPadding="false"
             android:padding="16dp">
@@ -83,9 +84,9 @@ android:id="@+id/parent">
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="30dp"
-                android:text="@string/sign_up"
                 android:backgroundTint="@color/main_color"
                 android:fontFamily="@font/nunito_bold"
+                android:text="@string/sign_up"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -94,21 +95,21 @@ android:id="@+id/parent">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signup_user_name"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                app:helperText="@string/helper_text"
-                app:helperTextTextColor="@color/helper_text_color"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintVertical_bias="0.636"
                 android:layout_marginHorizontal="20dp"
-                app:startIconDrawable = "@drawable/ic_baseline_person_24"
-                app:endIconMode="clear_text"
                 android:layout_marginTop="5dp"
                 android:hint="@string/name"
+                app:endIconMode="clear_text"
+                app:helperText="@string/helper_text"
+                app:helperTextTextColor="@color/helper_text_color"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.636"
+                app:startIconDrawable="@drawable/ic_baseline_person_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_username"
@@ -124,72 +125,72 @@ android:id="@+id/parent">
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:startIconDrawable="@drawable/ic_baseline_school_24"
-                app:startIconTint="?attr/colorControlNormal"
-                app:boxStrokeColor="@color/main_color"
-                app:helperText="@string/helper_text"
-                app:helperTextTextColor="@color/helper_text_color"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="4dp"
                 android:hint="@string/year"
-                android:layout_marginStart="20dp"
+                app:boxStrokeColor="@color/main_color"
+                app:helperText="@string/helper_text"
+                app:helperTextTextColor="@color/helper_text_color"
                 app:layout_constraintEnd_toStartOf="@+id/course"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/signup_user_name">
+                app:layout_constraintTop_toBottomOf="@+id/signup_user_name"
+                app:startIconDrawable="@drawable/ic_baseline_school_24"
+                app:startIconTint="?attr/colorControlNormal">
 
                 <AutoCompleteTextView
                     android:id="@+id/et_grad_year"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="none"
-                    tools:ignore="LabelFor"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    tools:ignore="LabelFor" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/course"
-                android:layout_width="0dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:startIconDrawable="@drawable/ic_baseline_menu_book_24"
-                app:startIconTint="?attr/colorControlNormal"
-                app:boxStrokeColor="@color/main_color"
-                app:helperText="@string/helper_text"
-                app:helperTextTextColor="@color/helper_text_color"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="20dp"
                 android:hint="@string/course"
+                app:boxStrokeColor="@color/main_color"
+                app:helperText="@string/helper_text"
+                app:helperTextTextColor="@color/helper_text_color"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/grad_year"
-                app:layout_constraintTop_toBottomOf="@+id/signup_user_name">
+                app:layout_constraintTop_toBottomOf="@+id/signup_user_name"
+                app:startIconDrawable="@drawable/ic_baseline_menu_book_24"
+                app:startIconTint="?attr/colorControlNormal">
 
                 <AutoCompleteTextView
                     android:id="@+id/et_course"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="none"
-                    tools:ignore="LabelFor"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    tools:ignore="LabelFor" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signup_email"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                app:helperText="@string/helper_text"
-                app:helperTextTextColor="@color/helper_text_color"
                 android:layout_marginHorizontal="20dp"
-                app:startIconDrawable = "@drawable/ic_baseline_email_24"
-                app:endIconMode="clear_text"
                 android:layout_marginTop="16dp"
                 android:hint="@string/email_address"
+                app:endIconMode="clear_text"
+                app:helperText="@string/helper_text"
+                app:helperTextTextColor="@color/helper_text_color"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/course">
+                app:layout_constraintTop_toBottomOf="@+id/course"
+                app:startIconDrawable="@drawable/ic_baseline_email_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_email"
@@ -201,45 +202,45 @@ android:id="@+id/parent">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/signup_password"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_marginHorizontal="20dp"
+                android:hint="@string/password"
                 app:helperText="@string/helper_text"
                 app:helperTextTextColor="@color/helper_text_color"
-                android:layout_marginHorizontal="20dp"
-                app:startIconDrawable = "@drawable/ic_baseline_lock_24"
-                android:hint="@string/password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/signup_email"
-                app:passwordToggleEnabled="true">
+                app:passwordToggleEnabled="true"
+                app:startIconDrawable="@drawable/ic_baseline_lock_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPassword"
                     android:fontFamily="@font/nunito_bold"
+                    android:inputType="textPassword"
                     android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/reg_no"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                app:helperText="@string/helper_text"
-                app:helperTextTextColor="@color/helper_text_color"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintVertical_bias="0.636"
                 android:layout_marginHorizontal="20dp"
-                app:startIconDrawable = "@drawable/ic_baseline_app_registration_24"
-                app:endIconMode="clear_text"
                 android:layout_marginTop="16dp"
                 android:hint="@string/registration_number"
+                app:endIconMode="clear_text"
+                app:helperText="@string/helper_text"
+                app:helperTextTextColor="@color/helper_text_color"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/signup_password">
+                app:layout_constraintTop_toBottomOf="@+id/signup_password"
+                app:layout_constraintVertical_bias="0.636"
+                app:startIconDrawable="@drawable/ic_baseline_app_registration_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_reg_no"
@@ -252,21 +253,21 @@ android:id="@+id/parent">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/mobile"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                app:helperText="@string/helper_text"
-                app:helperTextTextColor="@color/helper_text_color"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintVertical_bias="0.636"
                 android:layout_marginHorizontal="20dp"
-                app:startIconDrawable = "@drawable/ic_baseline_local_phone_24"
-                app:endIconMode="clear_text"
                 android:layout_marginTop="16dp"
                 android:hint="@string/phone_number"
+                app:endIconMode="clear_text"
+                app:helperText="@string/helper_text"
+                app:helperTextTextColor="@color/helper_text_color"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/reg_no">
+                app:layout_constraintTop_toBottomOf="@+id/reg_no"
+                app:layout_constraintVertical_bias="0.636"
+                app:startIconDrawable="@drawable/ic_baseline_local_phone_24">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_mobile"
