--- a/app/src/main/res/layout/club_list_item.xml
+++ b/app/src/main/res/layout/club_list_item.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_constraintWidth_percent="0.4"
     android:layout_width="0dp"
     android:layout_height="match_parent"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    app:layout_constraintWidth_percent="0.4">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/createBillForOwnCardView"
@@ -13,15 +12,15 @@
         android:layout_height="match_parent"
         android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="20dp"
+        android:backgroundTint="@color/white"
         android:clickable="true"
         android:focusable="true"
         app:cardCornerRadius="15dp"
         app:cardElevation="5dp"
-        android:backgroundTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:strokeColor="@color/slate_300"
         app:strokeWidth="1dp">
 
@@ -30,60 +29,59 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="20dp">
-<!--            <RelativeLayout-->
-<!--                android:id="@+id/imgUser"-->
-<!--                android:layout_margin="30dp"-->
-<!--                app:layout_constraintHeight_percent="0.5"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_centerHorizontal="true"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                android:background="@drawable/circle_border">-->
+            <!--            <RelativeLayout-->
+            <!--                android:id="@+id/imgUser"-->
+            <!--                android:layout_margin="30dp"-->
+            <!--                app:layout_constraintHeight_percent="0.5"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_centerHorizontal="true"-->
+            <!--                app:layout_constraintTop_toTopOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                android:background="@drawable/circle_border">-->
 
-                <ImageView
-                    android:id="@+id/profile_pic"
-                    android:layout_width="wrap_content"
-                    app:layout_constraintHeight_percent="0.5"
-                    android:layout_height="0dp"
-                    android:background="@drawable/circle"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/profile_icon"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-<!--            </RelativeLayout>-->
+            <ImageView
+                android:id="@+id/profile_pic"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:background="@drawable/circle"
+                android:scaleType="centerInside"
+                android:src="@drawable/profile_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <!--            </RelativeLayout>-->
 
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/club_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                app:layout_constraintTop_toBottomOf="@id/profile_pic"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:fontFamily="@font/nunito_bold"
                 android:layout_marginTop="10dp"
+                android:fontFamily="@font/nunito_bold"
                 android:text="CC Club"
+                android:textAlignment="center"
                 android:textColor="@color/black"
-                />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/profile_pic" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/textDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/bariol_bold"
-                android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/bariol_bold"
                 android:text="It is a awesome club."
                 android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@id/club_name"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="11sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:textSize="10sp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/club_name" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
