--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,10 +6,10 @@
     tools:context=".view.fragments.ProfileFragment">
 
     <RelativeLayout
+        android:id="@+id/topend"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/grad"
-        android:id="@+id/topend"
         android:paddingBottom="20dp">
 
         <RelativeLayout
@@ -61,7 +61,7 @@
             android:id="@+id/edit_img"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
             android:src="@drawable/add_icon2" />
@@ -85,8 +85,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
                 android:layout_marginTop="40dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -235,167 +235,155 @@
 </RelativeLayout>
 
 
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--    xmlns:tools="http://schemas.android.com/tools"-->
+    <!--    android:layout_width="match_parent"-->
+    <!--    android:layout_height="match_parent"-->
+    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--    tools:context=".view.fragments.ProfileFragment">-->
+
+    <!--    <androidx.core.widget.NestedScrollView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content">-->
+
+    <!--        <LinearLayout-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:orientation="vertical">-->
+
+    <!--            <LinearLayout-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:padding="20dp"-->
+    <!--                android:orientation="vertical"-->
+    <!--                android:layout_below="@+id/ll_2cd">-->
+
+    <!--                <com.google.android.material.textfield.TextInputLayout-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:hint="Full Name"-->
+    <!--                    android:layout_marginBottom="10dp">-->
+
+    <!--                    <com.google.android.material.textfield.TextInputEditText-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="wrap_content"-->
+    <!--                        android:id="@+id/tv_name_prof"-->
+    <!--                        android:text="My name"-->
+    <!--                        android:drawableLeft="@drawable/ic_person"-->
+    <!--                        android:drawablePadding="10dp"-->
+    <!--                        android:textStyle="bold"-->
+
+    <!--                        />-->
+
+    <!--                    &lt;!&ndash;            android:drawableLeft = "10dp"&ndash;&gt;-->
 
 
+    <!--                </com.google.android.material.textfield.TextInputLayout>-->
+
+    <!--                <com.google.android.material.textfield.TextInputLayout-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:hint="E-mail"-->
+    <!--                    android:layout_marginBottom="10dp">-->
+
+    <!--                    <com.google.android.material.textfield.TextInputEditText-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="wrap_content"-->
+    <!--                        android:id="@+id/tv_email_prof"-->
+    <!--                        android:text="My e-mail"-->
+    <!--                        android:drawableLeft="@drawable/ic_mail"-->
+    <!--                        android:drawablePadding="10dp"-->
+    <!--                        android:textStyle="bold"-->
+
+    <!--                        />-->
+
+    <!--                    &lt;!&ndash;            android:drawableLeft = "10dp"&ndash;&gt;-->
 
 
+    <!--                </com.google.android.material.textfield.TextInputLayout>-->
+
+    <!--                <com.google.android.material.textfield.TextInputLayout-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:hint="Phone number"-->
+    <!--                    android:layout_marginBottom="10dp">-->
+
+    <!--                    <com.google.android.material.textfield.TextInputEditText-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="wrap_content"-->
+    <!--                        android:id="@+id/tv_phone_prof"-->
+    <!--                        android:text="My name"-->
+    <!--                        android:drawableLeft="@drawable/ic_phone"-->
+    <!--                        android:drawablePadding="10dp"-->
+    <!--                        android:textStyle="bold"-->
+
+    <!--                        />-->
+
+    <!--                    &lt;!&ndash;            android:drawableLeft = "10dp"&ndash;&gt;-->
 
 
+    <!--                </com.google.android.material.textfield.TextInputLayout>-->
+
+    <!--                <com.google.android.material.textfield.TextInputLayout-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:hint="Address"-->
+    <!--                    android:layout_marginBottom="10dp">-->
+
+    <!--                    <com.google.android.material.textfield.TextInputEditText-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="wrap_content"-->
+    <!--                        android:id="@+id/tv_address_prof"-->
+    <!--                        android:text="My Address"-->
+    <!--                        android:drawableLeft="@drawable/ic_location"-->
+    <!--                        android:drawablePadding="10dp"-->
+    <!--                        android:textStyle="bold"-->
+
+    <!--                        />-->
+
+    <!--                    &lt;!&ndash;            android:drawableLeft = "10dp"&ndash;&gt;-->
 
 
+    <!--                </com.google.android.material.textfield.TextInputLayout>-->
+
+    <!--                <RelativeLayout-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="wrap_content">-->
+
+    <!--                    <Button-->
+    <!--                        android:id="@+id/btn_edit_prof"-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="wrap_content"-->
+    <!--                        android:text="Update"-->
+    <!--                        android:layout_marginLeft="20dp"-->
+    <!--                        android:layout_marginRight="20dp"-->
+    <!--                        android:layout_marginTop="20dp"-->
+    <!--                        android:elevation="5dp"-->
+    <!--                        android:clickable="true"-->
+    <!--                        android:backgroundTint="@color/contentTextColor"-->
+    <!--                        android:textColor="@color/black"/>-->
+
+    <!--                    <Button-->
+    <!--                        android:id="@+id/btn_done_prof"-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="wrap_content"-->
+    <!--                        android:text="Done"-->
+    <!--                        android:layout_marginLeft="20dp"-->
+    <!--                        android:layout_marginRight="20dp"-->
+    <!--                        android:layout_marginTop="20dp"-->
+    <!--                        android:elevation="5dp"-->
+    <!--                        android:clickable="true"-->
+    <!--                        android:backgroundTint="@color/green"-->
+    <!--                        android:textColor="@color/black"/>-->
+
+    <!--                </RelativeLayout>-->
 
 
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    tools:context=".view.fragments.ProfileFragment">-->
+    <!--            </LinearLayout>-->
 
-<!--    <androidx.core.widget.NestedScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
+    <!--        </LinearLayout>-->
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical">-->
+    <!--    </androidx.core.widget.NestedScrollView>-->
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:padding="20dp"-->
-<!--                android:orientation="vertical"-->
-<!--                android:layout_below="@+id/ll_2cd">-->
-
-<!--                <com.google.android.material.textfield.TextInputLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:hint="Full Name"-->
-<!--                    android:layout_marginBottom="10dp">-->
-
-<!--                    <com.google.android.material.textfield.TextInputEditText-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:id="@+id/tv_name_prof"-->
-<!--                        android:text="My name"-->
-<!--                        android:drawableLeft="@drawable/ic_person"-->
-<!--                        android:drawablePadding="10dp"-->
-<!--                        android:textStyle="bold"-->
-
-<!--                        />-->
-
-<!--                    &lt;!&ndash;            android:drawableLeft = "10dp"&ndash;&gt;-->
-
-
-<!--                </com.google.android.material.textfield.TextInputLayout>-->
-
-<!--                <com.google.android.material.textfield.TextInputLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:hint="E-mail"-->
-<!--                    android:layout_marginBottom="10dp">-->
-
-<!--                    <com.google.android.material.textfield.TextInputEditText-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:id="@+id/tv_email_prof"-->
-<!--                        android:text="My e-mail"-->
-<!--                        android:drawableLeft="@drawable/ic_mail"-->
-<!--                        android:drawablePadding="10dp"-->
-<!--                        android:textStyle="bold"-->
-
-<!--                        />-->
-
-<!--                    &lt;!&ndash;            android:drawableLeft = "10dp"&ndash;&gt;-->
-
-
-<!--                </com.google.android.material.textfield.TextInputLayout>-->
-
-<!--                <com.google.android.material.textfield.TextInputLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:hint="Phone number"-->
-<!--                    android:layout_marginBottom="10dp">-->
-
-<!--                    <com.google.android.material.textfield.TextInputEditText-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:id="@+id/tv_phone_prof"-->
-<!--                        android:text="My name"-->
-<!--                        android:drawableLeft="@drawable/ic_phone"-->
-<!--                        android:drawablePadding="10dp"-->
-<!--                        android:textStyle="bold"-->
-
-<!--                        />-->
-
-<!--                    &lt;!&ndash;            android:drawableLeft = "10dp"&ndash;&gt;-->
-
-
-<!--                </com.google.android.material.textfield.TextInputLayout>-->
-
-<!--                <com.google.android.material.textfield.TextInputLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:hint="Address"-->
-<!--                    android:layout_marginBottom="10dp">-->
-
-<!--                    <com.google.android.material.textfield.TextInputEditText-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:id="@+id/tv_address_prof"-->
-<!--                        android:text="My Address"-->
-<!--                        android:drawableLeft="@drawable/ic_location"-->
-<!--                        android:drawablePadding="10dp"-->
-<!--                        android:textStyle="bold"-->
-
-<!--                        />-->
-
-<!--                    &lt;!&ndash;            android:drawableLeft = "10dp"&ndash;&gt;-->
-
-
-<!--                </com.google.android.material.textfield.TextInputLayout>-->
-
-<!--                <RelativeLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content">-->
-
-<!--                    <Button-->
-<!--                        android:id="@+id/btn_edit_prof"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Update"-->
-<!--                        android:layout_marginLeft="20dp"-->
-<!--                        android:layout_marginRight="20dp"-->
-<!--                        android:layout_marginTop="20dp"-->
-<!--                        android:elevation="5dp"-->
-<!--                        android:clickable="true"-->
-<!--                        android:backgroundTint="@color/contentTextColor"-->
-<!--                        android:textColor="@color/black"/>-->
-
-<!--                    <Button-->
-<!--                        android:id="@+id/btn_done_prof"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Done"-->
-<!--                        android:layout_marginLeft="20dp"-->
-<!--                        android:layout_marginRight="20dp"-->
-<!--                        android:layout_marginTop="20dp"-->
-<!--                        android:elevation="5dp"-->
-<!--                        android:clickable="true"-->
-<!--                        android:backgroundTint="@color/green"-->
-<!--                        android:textColor="@color/black"/>-->
-
-<!--                </RelativeLayout>-->
-
-
-
-
-<!--            </LinearLayout>-->
-
-<!--        </LinearLayout>-->
-
-<!--    </androidx.core.widget.NestedScrollView>-->
-
-<!--</RelativeLayout>-->
+    <!--</RelativeLayout>-->
