--- a/app/src/main/res/layout/item_slide.xml
+++ b/app/src/main/res/layout/item_slide.xml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:padding="15dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="15dp">
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageSlideIcon"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
+
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title"
         android:layout_margin="10dp"
         android:fontFamily="@font/nunito_bold"
         android:gravity="center"
-        android:textSize="18dp"
-        />
+        android:text="Title"
+        android:textSize="18sp" />
+
     <TextView
         android:id="@+id/textDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Description"
         android:layout_margin="10dp"
-        android:fontFamily="@font/nunito_semibold"
-        android:gravity="center"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:textSize="18dp"
-        />
+        android:fontFamily="@font/nunito_semibold"
+        android:gravity="center"
+        android:text="Description"
+        android:textSize="18sp" />
+
 </LinearLayout>
