Optimize validating inputs
Use regex for G-Suite ID and reg no.

Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -142,7 +142,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="12dp"
-                android:hint="@string/email_address"
+                android:hint="@string/g_suite_id"
                 app:endIconMode="clear_text"
                 app:helperText="@string/helper_text"
                 app:helperTextTextColor="@color/helper_text_color"
